Move text adjust in css and fix spacing in html

--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,15 @@
 html {
   box-sizing: border-box;
+
+  -moz-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
 }
-
--moz-text-size-adjust: 100%;
--ms-text-size-adjust: 100%;
--webkit-text-size-adjust: 100%;
-text-size-adjust: 100%;
 
 ul {
   display: grid;
@@ -26,7 +26,7 @@ a {
   color: #76a500;
 }
 
-a:hover.
+a:hover,
 a:focus {
   color: #acc300;
 }
